@@ -1,19 +1,23 @@
 package com.lapissea.cfs.tools;
 
 import com.lapissea.cfs.GlobalConfig;
-import com.lapissea.cfs.io.content.ContentInputStream;
-import com.lapissea.cfs.io.content.ContentOutputStream;
-import com.lapissea.cfs.io.content.ContentReader;
+import com.lapissea.cfs.tools.logging.DataLogger;
+import com.lapissea.cfs.tools.logging.LoggedMemoryUtils;
+import com.lapissea.cfs.tools.logging.MemFrame;
 import com.lapissea.util.LogUtil;
+import com.lapissea.util.UtilL;
 import com.lapissea.util.function.UnsafeConsumer;
 import com.lapissea.util.function.UnsafeRunnable;
 
 import java.io.*;
 import java.net.*;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.function.Function;
 
 import static com.lapissea.util.LogUtil.Init.*;
 
@@ -26,7 +30,7 @@ public class DisplayServer implements DataLogger{
 		PING
 	}
 	
-	private static DataLogger getRealLogger(){
+	private static synchronized DataLogger getLocalLoggerImpl(){
 		try{
 			return new DisplayLWJGL();
 		}catch(Throwable e){
@@ -37,123 +41,114 @@ public class DisplayServer implements DataLogger{
 	public static void main(String[] args) throws IOException{
 		LogUtil.Init.attach(USE_CALL_POS|USE_TABULATED_HEADER);
 		
-		var config=Common.readConfig();
+		var config=LoggedMemoryUtils.readConfig();
 		int port  =(int)config.getOrDefault("port", 666);
 		
 		ServerSocket server=new ServerSocket(port);
 		
-		DataLogger display=Arrays.asList(args).contains("lazy")?null:getRealLogger();
+		DataLogger display=Arrays.asList(args).contains("lazy")?null:getLocalLoggerImpl();
 		
 		
 		LogUtil.println("started");
-		
+		int sesCounter=1;
 		while(true){
+			ServerSocket sessionServer;
+			String       sessionName;
 			try(Socket client=server.accept()){
-				LogUtil.println("connected", client);
-				ContentReader content=new ContentInputStream.Wrapp(new BufferedInputStream(client.getInputStream()));
-				var           out    =client.getOutputStream();
-				if(display==null) display=getRealLogger();
-				
-				run:
-				while(true){
-					try{
-						switch(Action.values()[content.readInt1()]){
-						case LOG -> {
-							MemFrame frame;
-							try(var i=new ObjectInputStream(new ByteArrayInputStream(content.readInts1(content.readInt4())))){
-								frame=(MemFrame)i.readObject();
-							}
-							display.log(frame);
-						}
-						case RESET -> {
-							display.reset();
-							System.gc();
-						}
-						case FINISH -> {
-							client.close();
-							break run;
-						}
-						case PING -> {
-							out.write(2);
-							out.flush();
-						}
-						}
-					}catch(SocketException e){
-						if("Connection reset".equals(e.getMessage())){
-							LogUtil.println("disconnected");
-							break;
-						}
-						e.printStackTrace();
-						break;
-					}catch(Exception e){
-						e.printStackTrace();
-						break;
-					}
-				}
+				sessionServer=new ServerSocket(0);
+				var out=new DataOutputStream(client.getOutputStream());
+				out.writeInt(sessionServer.getLocalPort());
+				out.flush();
+				var in=new DataInputStream(client.getInputStream());
+				sessionName=in.readUTF();
 			}catch(Exception e){
 				e.printStackTrace();
+				continue;
 			}
-			System.gc();
+			
+			if(display==null) display=getLocalLoggerImpl();
+			
+			DataLogger.Session session=display.getSession(sessionName);
+			new Thread(()->{
+				try(Socket client=sessionServer.accept()){
+					session(session, client);
+				}catch(Exception e){
+					e.printStackTrace();
+				}finally{
+					UtilL.closeSilenty(sessionServer);
+				}
+				System.gc();
+			}, "Session: "+sesCounter+"/"+sessionName).start();
 		}
 		
 	}
-	
-	final DataLogger proxy;
-	
-	public DisplayServer(Map<String, Object> config){
-		boolean threadedOutput=Boolean.parseBoolean(config.getOrDefault("threadedOutput", "false").toString());
-		int     port          =(int)config.getOrDefault("port", 666);
+	private static void session(DataLogger.Session display, Socket client) throws IOException{
+		LogUtil.println("connected", client);
+		var objInput=new ObjectInputStream(client.getInputStream());
+		var out     =client.getOutputStream();
 		
-		DataLogger proxy;
-		try{
-			var socketMake=new Socket();
+		run:
+		while(true){
 			try{
-				socketMake.connect(new InetSocketAddress(InetAddress.getLocalHost(), port), 100);
-			}catch(SocketTimeoutException e){
-				String jarPath=config.getOrDefault("jar", "").toString();
-				socketMake.close();
-				if(jarPath.isEmpty()) throw new IOException(e);
-				var debugMode=GlobalConfig.DEBUG_VALIDATION;
-				var args     ="--illegal-access=deny --enable-preview -XX:+UseG1GC -XX:MaxHeapFreeRatio=10 -XX:MinHeapFreeRatio=1 -Xms50m -server -XX:+UseCompressedOops";
-				
-				Process p=Runtime.getRuntime().exec("java -jar "+(debugMode?"-ea ":"")+args+" \""+new File(jarPath).getAbsolutePath()+"\" lazy");
-				p.getInputStream().read();
-				
-				socketMake=new Socket();
-				socketMake.connect(new InetSocketAddress(InetAddress.getLocalHost(), port), 100);
+				switch(Action.values()[objInput.readByte()]){
+				case LOG -> display.log((MemFrame)objInput.readObject());
+				case RESET -> {
+					display.reset();
+					System.gc();
+				}
+				case FINISH -> {
+					client.close();
+					break run;
+				}
+				case PING -> {
+					out.write(2);
+					out.flush();
+				}
+				}
+			}catch(SocketException e){
+				if("Connection reset".equals(e.getMessage())){
+					LogUtil.println("disconnected");
+					break;
+				}
+				e.printStackTrace();
+				break;
+			}catch(Exception e){
+				e.printStackTrace();
+				break;
 			}
-			var socket=socketMake;
-			
+		}
+	}
+	
+	private static class ServerSession implements DataLogger.Session{
+		
+		private final Session proxy;
+		
+		public ServerSession(Info conn, String name, Map<String, Object> config) throws IOException{
+			var socket=sessionConnection(conn, name, config);
 			LogUtil.println("connected", socket);
-			var is    =socket.getInputStream();
-			var writer=new ContentOutputStream.Wrapp((socket.getOutputStream()));
-//			var writer=new ContentOutputStream.Wrapp(new BufferedOutputStream(socket.getOutputStream()));
 			
-			UnsafeConsumer<Action, IOException> sendAction=(Action a)->writer.writeInt1(a.ordinal());
+			boolean threadedOutput=Boolean.parseBoolean(config.getOrDefault("threadedOutput", "false").toString());
+			
+			var is    =socket.getInputStream();
+			var writer=new ObjectOutputStream(socket.getOutputStream());
+			
+			UnsafeConsumer<Action, IOException> sendAction=(Action a)->writer.writeByte(a.ordinal());
 			
 			UnsafeRunnable<IOException> flush=()->{
 				if(threadedOutput) return;
-//				sendAction.accept(Action.PING);
 				writer.flush();
-//				is.read();
 			};
 			
-			proxy=new DataLogger(){
+			
+			DataLogger.Session proxy;
+			
+			proxy=new DataLogger.Session(){
+				
 				@Override
 				public void log(MemFrame frame){
 					try{
 						sendAction.accept(Action.LOG);
-						
-						
-						var bb=new ByteArrayOutputStream();
-						try(var o=new ObjectOutputStream(bb)){
-							o.writeObject(frame);
-						}catch(IOException ioException){
-							ioException.printStackTrace();
-						}
-						
-						writer.writeInt4(bb.size());
-						bb.writeTo(writer);
+						writer.writeObject(frame);
 						flush.run();
 					}catch(SocketException ignored){
 					}catch(IOException e){
@@ -187,9 +182,9 @@ public class DisplayServer implements DataLogger{
 			};
 			
 			if(threadedOutput){
-				ExecutorService exec  =Executors.newSingleThreadExecutor();
-				DataLogger      logger=proxy;
-				proxy=new DataLogger(){
+				ExecutorService    exec  =Executors.newSingleThreadExecutor();
+				DataLogger.Session logger=proxy;
+				proxy=new Session(){
 					@Override
 					public void log(MemFrame frame){
 						exec.execute(()->logger.log(frame));
@@ -207,27 +202,95 @@ public class DisplayServer implements DataLogger{
 					}
 				};
 			}
-			
 			proxy.reset();
-		}catch(IOException e){
-			e.printStackTrace();
-			proxy=getRealLogger();
+			this.proxy=proxy;
+			
 		}
-		this.proxy=proxy;
+		
+		public static record Info(InetAddress addr, int timeout){}
+		
+		private static Socket sessionConnection(Info con, String sessionName, Map<String, Object> config) throws IOException{
+			int port=(int)config.getOrDefault("port", 666);
+			
+			var socketMake=new Socket();
+			try{
+				socketMake.connect(new InetSocketAddress(con.addr, port), con.timeout);
+			}catch(SocketTimeoutException e){
+				
+				String jarPath=config.getOrDefault("jar", "").toString();
+				socketMake.close();
+				if(jarPath.isEmpty()) throw e;
+				var     debugMode=GlobalConfig.DEBUG_VALIDATION;
+				var     args     =Objects.requireNonNull((String)config.get("startArgs"));
+				Process p        =Runtime.getRuntime().exec("java -jar "+(debugMode?"-ea ":"")+args+" \""+new File(jarPath).getAbsolutePath()+"\" lazy");
+				p.getInputStream().read();
+				
+				socketMake=new Socket();
+				socketMake.connect(new InetSocketAddress(con.addr, port), con.timeout);
+			}
+			
+			int realPort;
+			try(var preSocket=socketMake){
+				var in=new DataInputStream(preSocket.getInputStream());
+				realPort=in.readInt();
+				var out=new DataOutputStream(preSocket.getOutputStream());
+				out.writeUTF(sessionName);
+				out.flush();
+			}
+			
+			return new Socket(InetAddress.getLocalHost(), realPort);
+		}
+		
+		@Override
+		public void log(MemFrame frame){
+			proxy.log(frame);
+		}
+		@Override
+		public void finish(){
+			proxy.finish();
+		}
+		@Override
+		public void reset(){
+			proxy.reset();
+		}
+	}
+	
+	
+	private Function<String, Session> sessionCreator;
+	
+	private final Map<String, Object>  config;
+	private final Map<String, Session> sessions=new HashMap<>();
+	
+	public DisplayServer(Map<String, Object> config){
+		this.config=config;
+		
+		sessionCreator=name->{
+			try{
+				return new ServerSession(new ServerSession.Info(InetAddress.getLocalHost(), 100), name, this.config);
+			}catch(SocketTimeoutException e){
+				LogUtil.printlnEr("Could not contact or start the server!");
+			}catch(Throwable e){
+				e.printStackTrace();
+			}
+			
+			LogUtil.printlnEr("Switching to local server session.");
+			
+			sessionCreator=getLocalLoggerImpl()::getSession;
+			
+			return sessionCreator.apply(name);
+		};
 	}
 	
 	@Override
-	public void log(MemFrame frame){
-		proxy.log(frame);
+	public Session getSession(String name){
+		if(sessionCreator==null) throw new IllegalStateException("This server has been closed");
+		return sessions.computeIfAbsent(name, sessionCreator);
 	}
 	
 	@Override
-	public void finish(){
-		proxy.finish();
-	}
-	
-	@Override
-	public void reset(){
-		proxy.reset();
+	public void destroy(){
+		sessionCreator=null;
+		sessions.values().forEach(Session::finish);
+		sessions.clear();
 	}
 }
